--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://usuario:contraseña@localhost:5432/mark99
-PORT=3000
-API_PREFIX="/api/V1"
-JWT_SECRET=tu_clave_secreta 
+# DATABASE_URL=postgresql://usuario:contraseña@localhost:5432/mark99
+# PORT=3000
+# API_PREFIX="/api/v1"
+# JWT_SECRET=tu_clave_secreta 
